# table-builder-app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  dynamic-table.json  pyproject.toml
dynamic_table/: asgi.py  urls.py  wsgi.py
dynamic_table/api/core/: urls.py  views.py
dynamic_table/core/: apps.py  models.py
dynamic_table/core/migrations/: 0001_initial.py
pgdata/: postmaster.pid
pgdata/base/1/: pg_internal.init
pgdata/base/16384/: 16391  16397  16399  16405  16441  16448  16533  16555  16561  2619  2696  pg_internal.init
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  1262  pg_control  pg_internal.init
settings/: common.py
src/dynamic_table/api/: urls.py
src/dynamic_table/api/core/: serializers.py
src/settings/: common.py
src/tests/dynamic_table/api/core/: test_dynamic_table_api.py
src/tests/dynamic_table/core/: test_dynamic_table.py
tests/: settings.py
tests/dynamic_table/api/: api_helper.py  reversed_urls.py
